--- a/Happy-Hour/src/main/resources/application.properties
+++ b/Happy-Hour/src/main/resources/application.properties
@@ -1,17 +1,18 @@
-## Database connection settings
-#spring.datasource.url=jdbc:mysql://localhost:3306/coding-events
-#spring.datasource.username=user
-#spring.datasource.password=greatpassword
-#
-## Specify the DBMS
-#spring.jpa.database = MYSQL
-#
-## Show or not log for each sql query
-#spring.jpa.show-sql = false
-#
-## Hibernate ddl auto (create, create-drop, update)
-#spring.jpa.hibernate.ddl-auto = update
-#
-## Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-## stripped before adding them to the entity manager)
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+# suppress inspection "UnusedProperty" for whole file
+# Database connection settings
+spring.datasource.url=jdbc:mysql://happyhour.c2gxqwqokz6j.us-east-2.rds.amazonaws.com:3306/HappyHours
+spring.datasource.username=admin
+spring.datasource.password=happyMeower!
+
+# Specify the DBMS
+spring.jpa.database = MYSQL
+
+# Show or not log for each sql query
+spring.jpa.show-sql = false
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
