--- a/Happy-Hour/src/main/resources/application.properties
+++ b/Happy-Hour/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://happyhour.c2gxqwqokz6j.us-east-2.rds.amazonaws.com:3306/HappyHours
 spring.datasource.username=admin
-spring.datasource.password=happyMeower!
+spring.datasource.password=#Password redacted
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
